# zoterios

./: .gitignore  AGENTS.md  README.md  SKILL.md  prek.toml  pyproject.toml
src/zoterios/: __init__.py  cli.py  config.py  models.py
src/zoterios/commands/: arxiv.py  install_skill.py  markdownit.py  papers.py  ping.py
src/zoterios/services/: arxiv.py  connector.py  pdf.py  zotero.py
