[project]
name = "zoterios"
version = "0.1.0"
description = "A CLI tool to interact with local Zotero library."
readme = "README.md"
authors = [
    { name = "Justin Wong", email = "justin.w.xd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "httpx>=0.28",
    "markitdown[pdf]>=0.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
zoterios = "zoterios.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "ruff>=0.15.7",
]
